# stitchem

./: .gitignore  README.md  pyproject.toml
src/stitchem/: cli.py  conversion.py  io.py  stitch.py
src/stitchem/align/: benchmark.py  bruteforce.py  match_template.py  orb.py  phase_cross_correlation.py
tests/: test_bruteforce.py  test_cli.py  test_phasecrosscorrelation.py
