[project]
name = "stitchem"
version = "0.1.0"
description = "Fast image stitching to convert areascan images to linescan images."
readme = "README.md"
authors = [
    { name = "roel klein", email = "roel.klein@wur.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "numba>=0.63.1",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.1",
]

optional-dependencies = {  }

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
plot = [
    "matplotlib>=3.10.8",
    "mplhep>=0.4.1",
]

[project.scripts]
stitchem-cli = "stitchem.cli:entrypoint"
